# wormfic-review

./: .gitignore  Cargo.toml  fics.config.example.toml
src/: config.rs  count.rs  crawl.rs  fics.rs  main.rs  rating.rs  sheet.rs  sheets.rs
src/crawl/: ao3.rs  html.rs
src/sheets/: auth.rs
